# sentimentAnalysis12factor

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
sentimentanalysis12factor/: __init__.py  api.py  config.py  dataset.py  features.py  plots.py
sentimentanalysis12factor/modeling/: predict.py  train.py
src/sentimentAnalysis/: api.py
tests/: test_api.py
