[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sentimentanalysis12factor"
version = "0.0.1"
description = "a simple sentiment analysis application that follows 12 factor principles"
authors = [
  { name = "Ishwor Pokharel" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["sentimentanalysis12factor"]
include = ["pyproject.toml", "sentimentanalysis12factor/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["sentimentanalysis12factor"]
force-sort-within-sections = true

